--- a/Android/Shopking/app/build.gradle
+++ b/Android/Shopking/app/build.gradle
@@ -29,6 +29,12 @@ android {
 }
 
 dependencies {
+    def constraint_layout_version = "1.1.3"
+    def fragment_container_view_version = "1.2.3"
+    def recycler_view_version = "1.1.0"
+    def shimmer_layout_version = "0.5.0"
+    def percent_layout_version = "1.0.0"
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -38,4 +44,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+    implementation "androidx.fragment:fragment-ktx:$fragment_container_view_version"
+    implementation "androidx.recyclerview:recyclerview:$recycler_view_version"
+    implementation "com.facebook.shimmer:shimmer:$shimmer_layout_version"
+    implementation "androidx.percentlayout:percentlayout:$percent_layout_version"
 }
