--- a/Android/Shopking/app/build.gradle
+++ b/Android/Shopking/app/build.gradle
@@ -26,28 +26,38 @@ android {
     dataBinding {
         enabled = true
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
-    def constraint_layout_version = "1.1.3"
-    def fragment_container_view_version = "1.2.3"
+    def kyx_core_version = "1.3.2"
+    def appcompat_version = "1.2.0"
+    def constraint_layout_version = "2.0.4"
+    def junit_version = "4.13"
+    def junit_ext_version = "1.1.2"
+    def espresso_version = "3.3.0"
+    def lifecycle_extensions_version = "1.1.1"
+    def fragment_container_view_version = "1.2.5"
     def recycler_view_version = "1.1.0"
     def shimmer_layout_version = "0.5.0"
     def percent_layout_version = "1.0.0"
+    def material_version = "1.2.1"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-
+    implementation "androidx.core:core-ktx:$kyx_core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_extensions_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_container_view_version"
     implementation "androidx.recyclerview:recyclerview:$recycler_view_version"
     implementation "com.facebook.shimmer:shimmer:$shimmer_layout_version"
     implementation "androidx.percentlayout:percentlayout:$percent_layout_version"
+    implementation "com.google.android.material:material:$material_version"
 }
