--- a/Android/Shopking/app/build.gradle
+++ b/Android/Shopking/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     def percent_layout_version = "1.0.0"
     def material_version = "1.2.1"
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$kyx_core_version"
