--- a/Android/Shopking/app/build.gradle
+++ b/Android/Shopking/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     def material_version = "1.2.1"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$kyx_core_version"
