--- a/Android/Shopking/app/src/main/AndroidManifest.xml
+++ b/Android/Shopking/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest package="hr.fer.objobl.shopking"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".application.ShopkingApplication"
         android:allowBackup="true"
