--- a/API/Shopking/Shopking/Shopking.csproj
+++ b/API/Shopking/Shopking/Shopking.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.2" />
     <PackageReference Include="NHibernate" Version="5.3.5" />
     <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
