--- a/Desktop/Desktop/Desktop.csproj
+++ b/Desktop/Desktop/Desktop.csproj
@@ -63,8 +63,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Content\InformationContext.cs" />
     <Compile Include="Content\ItemContext.cs" />
     <Compile Include="Content\RecipeContext.cs" />
+    <Compile Include="Content\ShopContext.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -75,8 +77,10 @@
     <Compile Include="Model\Clothing.cs" />
     <Compile Include="Model\Device.cs" />
     <Compile Include="Model\Food.cs" />
+    <Compile Include="Model\Information.cs" />
     <Compile Include="Model\Item.cs" />
     <Compile Include="Model\Recipe.cs" />
+    <Compile Include="Model\Shop.cs" />
     <Compile Include="Model\Toiletry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
